# format-bom

./: Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: checks.yml  deploy.yml  todo-to-action.yml
src/: checker.rs  explorer.rs  fix_rule.rs  fixer.rs  formatter.rs  main.rs
src/arg_parser/: fix_mode.rs  fix_mode_args.rs  fix_rule.rs  mod.rs
src/formatter/: bom_formatter.rs  checker.rs  mod.rs
