[package]
name = "format-bom"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A tool for handling BOM mark from UTF-8 files"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.10", features = ["derive"] }
regex = "1.9.1"
ignore = "0.4.20"
tempfile = "3.6.0"
