[package]
name = "format-bom"
version = "0.0.5"
edition = "2021"
license = "MIT OR Apache-2.0"
author = ["Dosang Gu <ddos0418@gmail.com>"]
description = "A tool for handling BOM mark from UTF-8 files"
repository = "https://github.com/DosangGu/format-bom"
keywords = ["bom", "utf-8", "utf8", "format", "cli"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
regex = "1.11.1"
ignore = "0.4.23"
tempfile = "3.19.0"
